gatekeeper/templates/k8srequireingresstls_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireIngressTLS
metadata:
  name: require-ingress-tls
spec:
  match:
    kinds:
    - apiGroups: ["networking.k8s.io"]
      kinds: ["Ingress"]
